tests/expectations/parser/expression/literal/scalar_hexbin_fail.out
namespace = "ParseExpression"
expectation = "Fail"
outputs = [
    """
Error [EPAR0370042]: Hex, octal, and binary literals may only be used for integer types.
    --> test:1:1
     |
   1 | 0xAAscalar
     | ^^^^""",
    """
Error [EPAR0370042]: Hex, octal, and binary literals may only be used for integer types.
    --> test:1:1
     |
   1 | 0b10scalar
     | ^^^^""",
]
